--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "interiordesign",
   "version": "0.1.0",
   "engines": {
-    "node": "12.x"
+    "node": "12.22.1"
+  },
+  "homepage": {
+    "http://abdullahmerndev.github.io/buyoot-app"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -30,7 +35,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.1"
   }
 }
